Change Base URL Hugo.YAML

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://mfurkan.github.io/blog/"
 title: FurkanYILMAZ.ME
 paginate: 5
 theme: PaperMod
