--- a/hugo.yaml
+++ b/hugo.yaml
@@ -75,16 +75,16 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "Merhaba \U0001F44B"
-    Content: Bloguma Hoşgeldiniz
+    Title: "Merhaba, Ben Furkan \U0001F44B"
+    Content: Full Stack Developer yolunda... 🎯
 
   socialIcons:
-    - name: x
-      url: "https://x.com/"
-    - name: stackoverflow
-      url: "https://stackoverflow.com"
+    - name: youtube
+      url: "https://www.youtube.com/@furkanyilmazme"
     - name: github
-      url: "https://github.com/"
+      url: "https://github.com/mFurkan"
+    - name: email
+      url: "mailto:frkan@live.fr"
 
   analytics:
     google:
@@ -111,19 +111,24 @@ params:
     minMatchCharLength: 0
     limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
     keys: ["title", "permalink", "summary", "content"]
+    outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # necessary for search
 menu:
   main:
     - identifier: categories
-      name: categories
+      name: Kategoriler
       url: /categories/
       weight: 10
     - identifier: tags
-      name: tags
+      name: Etiketler
       url: /tags/
       weight: 20
     - identifier: example
-      name: example.org
-      url: https://example.org
+      name: 🔎 Arama
+      url: /search/
       weight: 30
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
