--- a/hugo.yaml
+++ b/hugo.yaml
@@ -111,8 +111,9 @@ params:
     minMatchCharLength: 0
     limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
     keys: ["title", "permalink", "summary", "content"]
-    outputs:
-  home:
+    
+  outputs:
+   home:
     - HTML
     - RSS
     - JSON # necessary for search
@@ -126,10 +127,14 @@ menu:
       name: Etiketler
       url: /tags/
       weight: 20
-    - identifier: example
+    - identifier: archive
+      name: Arşiv
+      url: /archives/
+      weight: 30
+    - identifier: search
       name: 🔎 Arama
       url: /search/
-      weight: 30
+      weight: 40
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
